--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -44,6 +44,11 @@
         <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}">
         <meta name="msapplication-config" content="{% static 'images/browserconfig.xml' %}">
         <meta name="theme-color" content="#00afef">
+        <!-- Languages
+	    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="alternate" href="https://mymensor.com" hreflang="en"/>
+        <link rel="alternate" href="https://mymensor.com/pt-br" hreflang="pt-BR"/>
+        <link rel="alternate" href="https://mymensor.com/pt" hreflang="pt"/>
         {% block header %}{% endblock %}
     </head>
     <body>
