--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -45,7 +45,7 @@
         <meta name="theme-color" content="#00afef">
         <!-- Languages
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-        <link rel="alternate" href="https://mymensor.com" hreflang="en"/>
+        <link rel="alternate" href="https://mymensor.com/en" hreflang="en"/>
         <link rel="alternate" href="https://mymensor.com/pt-br" hreflang="pt-BR"/>
         <link rel="alternate" href="https://mymensor.com/pt" hreflang="pt"/>
         {% block header %}{% endblock %}
