--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -5,6 +5,19 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
+        <!-- Global Site Tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106891333-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments)
+            };
+            gtag('js', new Date());
+
+            gtag('config', 'UA-106891333-1');
+        </script>
+
         <!-- Basic Page Needs.
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <meta charset="utf-8">
