--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -6,40 +6,6 @@
     {% block title %}{{ block.super }}{% endblock %}
     {% block content %}
 
-        <!-- Google Code for Add to Cart Conversion Page
-	    In your html page, add the snippet and call goog_report_conversion
-	    when someone clicks on the chosen link or button. -->
-        <script type="text/javascript">
-            /* <![CDATA[ */
-            goog_snippet_vars = function () {
-                var w = window;
-                w.google_conversion_id = 840928180;
-                w.google_conversion_label = "ByZoCIPXu3UQtJf";
-                w.google_conversion_value = 1.00;
-                w.google_conversion_currency = "EUR";
-                w.google_remarketing_only = false;
-            }
-            // DO NOT CHANGE THE CODE BELOW.
-            goog_report_conversion = function (url) {
-                goog_snippet_vars();
-                window.google_conversion_format = "3";
-                var opt = new Object();
-                opt.onload_callback = function () {
-                    if (typeof(url) != 'undefined') {
-                        window.location = url;
-                    }
-                }
-                var conv_handler = window['google_trackConversion'];
-                if (typeof(conv_handler) == 'function') {
-                    conv_handler(opt);
-                }
-            }
-            /* ]]> */
-        </script>
-        <script type="text/javascript"
-                src="//www.googleadservices.com/pagead/conversion_async.js">
-        </script>
-
         <style>
             /* note: this is a hack for ios iframe for bootstrap themes shopify page */
             /* this chunk of css is not part of the toolkit :) */
@@ -82,7 +48,8 @@
                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">{% trans "LOGIN" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" onclick="goog_report_conversion ('https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/')" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
+                    <a id="registerbtn" class="nav-link"
+                       href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                 </li>
             </ul>
@@ -132,7 +99,7 @@
                                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">{% trans "LOGIN" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link" onclick="goog_report_conversion ('https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/')"
+                                    <a id="registerbtn" class="nav-link"
                                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                                 </li>
@@ -147,7 +114,7 @@
                             <div class="col-sm-10 col-lg-6">
                                 <h1 class="block-titleData frequency">{% trans "Simple and evidenced control." %}</h1>
                                 <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
-                                <a class="btn btn-primary btn-lg"
+                                <a id="registerbtn" class="btn btn-primary btn-lg"
                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                    role="button">{% trans "Trial free now!" %}</a>
                             </div>
@@ -221,7 +188,7 @@
                             <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
                             <h3>{% trans " Share captures automatically via Twitter and Email." %}</h3>
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
-                            <a class="btn btn-secondary btn-lg btn-borderless"
+                            <a id="registerbtn" class="btn btn-secondary btn-lg btn-borderless"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
@@ -353,7 +320,7 @@
                                     <strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs per user (Two apps in the same device is one install!)" %}
                                 </li>
                             </ul>
-                            <a class="btn btn-primary btn-lg btn-block"
+                            <a id="registerbtn" class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
@@ -381,7 +348,7 @@
                                     <strong>{% trans "Data Features" %}</strong>{% trans " Process, edit, know the status and analyse your data" %}
                                 </li>
                             </ul>
-                            <a class="btn btn-primary btn-lg btn-block"
+                            <a id="registerbtn" class="btn btn-primary btn-lg btn-block"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
@@ -465,6 +432,21 @@
                     counter = 0;
                 }
             }
+
+
+            $('registerbtn').click(function (event) {
+                event.preventDefault();
+                console.log("Button pressed:" + $(this).attr('id'));  // sanity check
+                gtag('event', 'registerbtnpressed', {
+                    'transport_type': 'beacon',
+                    'event_category': 'engagement',
+                    'event_action': 'actionregisterbtnpressed',
+                    'event_label': 'labelregisterbtnpressed',
+                    'value': 8
+                });
+            });
+
+
         </script>
     {% endblock %}
 {% endlocaltime %}
