--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -434,7 +434,7 @@
             }
 
 
-            $('registerbtn').click(function (event) {
+            $('#registerbtn').click(function (event) {
                 event.preventDefault();
                 console.log("Button pressed:" + $(this).attr('id'));  // sanity check
                 gtag('event', 'registerbtnpressed', {
