--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -409,7 +409,7 @@
 
                 var btn = document.getElementsByClassName('registerbtn');
 
-                btn.addEventListener("click", function () {
+                document.addEventListener("click", function () {
                     console.log("Button pressed");  // sanity check
                 });
 
