--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -48,7 +48,7 @@
                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">{% trans "LOGIN" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link registerbtn"
+                    <a id="registerbtn" class="nav-link registerbtn"
                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                 </li>
@@ -99,7 +99,7 @@
                                        href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">{% trans "LOGIN" %}</a>
                                 </li>
                                 <li class="nav-item px-1 ">
-                                    <a class="nav-link registerbtn"
+                                    <a id="registerbtn" class="nav-link registerbtn"
                                        href="#"><strong
                                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                                 </li>
