--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -407,11 +407,15 @@
                     });
                 }
 
-                var btn = document.getElementsByClassName('registerbtn');
+                var btns = document.getElementsByClassName('registerbtn');
+                var btnslength = btns.length;
+                for (var i=0; i < btnslength; i++){
+                    btns[i].addEventListener("click", clickCallback, false);
+                };
+                function clickCallback(){
+                    console.log("Clicked at: "+ this.id);  // sanity check
+                }
 
-                document.addEventListener("click", function (event) {
-                    console.log("Clicked at: "+event.target);  // sanity check
-                });
 
             });
 
