--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -100,7 +100,7 @@
                                 </li>
                                 <li class="nav-item px-1 ">
                                     <a id="registerbtn" class="nav-link registerbtn"
-                                       href="#"><strong
+                                       href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                                             style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                                 </li>
                             </ul>
