--- a/mymwebsite/templates/index.html
+++ b/mymwebsite/templates/index.html
@@ -114,7 +114,7 @@
                             <div class="col-sm-10 col-lg-6">
                                 <h1 class="block-titleData frequency">{% trans "Simple and evidenced control." %}</h1>
                                 <p class="lead mb-4 text-muted">{% trans " Use images to control everything remotely <br> using an Android smartphone." %}</p>
-                                <a class="btn btn-primary btn-lg registerbtn"
+                                <a id="registerbtn" class="btn btn-primary btn-lg registerbtn"
                                    href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                    role="button">{% trans "Trial free now!" %}</a>
                             </div>
@@ -188,7 +188,7 @@
                             <h6 class="text-muted text-uppercase">{% trans "Simplified Sharing" %}</h6>
                             <h3>{% trans " Share captures automatically via Twitter and Email." %}</h3>
                             <p class="lead mb-4 text-muted">{% trans " Promote your work with the reliability of the MyMensor certification. Your customers and friends can easily check the location and date of the media capture, even without a MyMensor subscription." %}</p>
-                            <a class="btn btn-secondary btn-lg btn-borderless registerbtn"
+                            <a id="registerbtn" class="btn btn-secondary btn-lg btn-borderless registerbtn"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
@@ -320,7 +320,7 @@
                                     <strong>{% trans "Mobile App" %}</strong>{% trans " up to five installs per user (Two apps in the same device is one install!)" %}
                                 </li>
                             </ul>
-                            <a class="btn btn-primary btn-lg btn-block registerbtn"
+                            <a id="registerbtn" class="btn btn-primary btn-lg btn-block registerbtn"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
@@ -348,7 +348,7 @@
                                     <strong>{% trans "Data Features" %}</strong>{% trans " Process, edit, know the status and analyse your data" %}
                                 </li>
                             </ul>
-                            <a class="btn btn-primary btn-lg btn-block registerbtn"
+                            <a id="registerbtn" class="btn btn-primary btn-lg btn-block registerbtn"
                                href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"
                                role="button">{% trans "Trial free now!" %}</a>
                         </div>
