--- a/mymwebsite/templates/cases/followingremotejobs.html
+++ b/mymwebsite/templates/cases/followingremotejobs.html
@@ -12,7 +12,7 @@
     <p>{% trans "The trouble is that the second building was delayed, he continued receiving the photos by email, eventually he decided to take a flight and make a surprise visit to the construction site. Of course that you already know what happened." %}</p>
     <p>{% trans "There was no second building! His money was gone and down there he discovered that he was targeted with a scam known to the locals. He needed a tool to protect him from that." %}</p>
     <p>{% trans "Using just the MyMensor Media Plan one could follow the project headway remotely using the certified media. Going even deeper you could establish measuring criteria and using MyMensor Media and Data Plan follow up the different aspects of the construction using the tables and graphical MyMensor tools." %}</p>
-    <p>{% trans "Do you have a remote project and it is going astray? We can help mend that! " %}<a
+    <p>{% trans "Do you have a remote project and it is going astray? We can help mend that! " %}<a id="registerbtn"
             href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "Start your 30-day free-trial now. " %}</a>
     </p>
 {% endblock %}
