--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -210,6 +210,7 @@
         var btns = document.getElementsByClassName('registerbtn');
         var btnslength = btns.length;
         for (var i = 0; i < btnslength; i++) {
+            console.log("btn="+i+"-"+btns[i].id);
             btns[i].addEventListener("click", clickCallback, false);
         }
 
