--- a/mymwebsite/templates/cases/genusemediaplan.html
+++ b/mymwebsite/templates/cases/genusemediaplan.html
@@ -12,6 +12,6 @@
     <p>{% trans "On top of that, MyMensor will tell you if time and location were certified and then you can trust that the media is really what it seems to be." %}</p>
     <p>{% trans "This what I call a general, simple use to MyMensor Media: media certification." %}</p>
     <p>{% trans "But there is a lot more to MyMensor Media: automatic filing, automatic sharing etc. So, look no further, " %}
-        <a id="registerbtn" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now. " %}</a>{% trans "No Credit Card is required during trial period and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
+        <a id="registerbtn" class="registerbtn" href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/">{% trans "start your 30-day free-trial now. " %}</a>{% trans "No Credit Card is required during trial period and, even when you have subscribed, you can easily cancel at any time, just clicking a button!" %}
     </p>
 {% endblock %}
