--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -101,7 +101,7 @@
                         <li class="nav-item"><a class="nav-link"
                                                 href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/login/">Login</a>
                         </li>
-                        <li class="nav-item"><a id="registerbtn" class="nav-link"
+                        <li class="nav-item"><a id="registerbtn" class="nav-link registerbtn"
                                                 href="https://app.mymensor.com/{{ LANGUAGE_CODE }}/accounts/register/"><strong
                                 style="background: #fff; padding: 12px; border-radius: 4px; color: #28669F;">{% trans "Register" %}</strong></a>
                         </li>
