--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -80,7 +80,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-md-3 offset-md-1 mb-5">
+                    <div class="col-md-3 ml-auto mb-5">
                         <ul class="list-unstyled list-spaced">
                             <li class="mb-2"><h6 class="text-uppercase">{% trans "Product" %}</h6></li>
                             <li><a class="text-muted"
