--- a/mymwebsite/templates/base.html
+++ b/mymwebsite/templates/base.html
@@ -155,6 +155,7 @@
     <div class="eupopup eupopup-bottom eupopup-style-compact"></div>
     <script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
     <script src="{% static "js/tether.min.js" %}"></script>
+    <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/toolkit.js" %}"></script>
     <script src="{% static "js/application.js" %}"></script>
     <script src="{% static "js/social-share-kit.js" %}"></script>
