--- a/mymwebsite/templates/innerbase.html
+++ b/mymwebsite/templates/innerbase.html
@@ -201,6 +201,7 @@
     {% endblock %}
     <script src="{% static "js/jquery-3.1.1.min.js" %}"></script>
     <script src="{% static "js/tether.min.js" %}"></script>
+    <script src="{% static "js/popper.min.js" %}"></script>
     <script src="{% static "js/toolkit.js" %}"></script>
     <script src="{% static "js/application.js" %}"></script>
     <script src="{% static "js/social-share-kit.js" %}"></script>
